[package]
name = "mangapill-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
futures = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.12.24" }
scraper = { version = "0.25.0" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
