[package]
name = "mangapill-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
env_logger = "0.11.8"
futures = "0.3.31"
indicatif = "0.18.3"
lapin = "3.7.2"
log = "0.4.29"
reqwest = { version = "0.12.24" }
rkyv = "0.8.12"
scraper = { version = "0.25.0" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
